css modificado e ajustes finais

--- a/projetoGatinhosAPI/main.html
+++ b/projetoGatinhosAPI/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="cat-name">Novo Gato</h1>
+        <h1 id="cat-name">ENCONTRE UM GATO</h1>
         <div class="image-box">
             <img id="cat-image" alt="Imagem de um gato" src="https://media.tenor.com/gEPF7fBZy3IAAAAe/shitpost-cat.png">
         </div>
